logs/dag_id=predict_values_TS_21/run_id=scheduled__2024-08-04T000000+0000/task_id=get_deaths_dataset.create_deaths_table/attempt=1.log
[2024-08-17T10:29:38.607+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-08-17T10:29:38.620+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: predict_values_TS_21.get_deaths_dataset.create_deaths_table scheduled__2024-08-04T00:00:00+00:00 [queued]>
[2024-08-17T10:29:38.627+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: predict_values_TS_21.get_deaths_dataset.create_deaths_table scheduled__2024-08-04T00:00:00+00:00 [queued]>
[2024-08-17T10:29:38.628+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2024-08-17T10:29:38.639+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): get_deaths_dataset.create_deaths_table> on 2024-08-04 00:00:00+00:00
[2024-08-17T10:29:38.648+0000] {warnings.py:110} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=89180) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-08-17T10:29:38.649+0000] {standard_task_runner.py:63} INFO - Started process 91249 to run task
[2024-08-17T10:29:38.649+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'predict_values_TS_21', 'get_deaths_dataset.create_deaths_table', 'scheduled__2024-08-04T00:00:00+00:00', '--job-id', '121', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmp1d2s77oy']
[2024-08-17T10:29:38.651+0000] {standard_task_runner.py:91} INFO - Job 121: Subtask get_deaths_dataset.create_deaths_table
[2024-08-17T10:29:38.690+0000] {task_command.py:426} INFO - Running <TaskInstance: predict_values_TS_21.get_deaths_dataset.create_deaths_table scheduled__2024-08-04T00:00:00+00:00 [running]> on host 57503ef29846
[2024-08-17T10:29:38.760+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Ruslan Solarev' AIRFLOW_CTX_DAG_ID='predict_values_TS_21' AIRFLOW_CTX_TASK_ID='get_deaths_dataset.create_deaths_table' AIRFLOW_CTX_EXECUTION_DATE='2024-08-04T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-08-04T00:00:00+00:00'
[2024-08-17T10:29:38.762+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-08-17T10:29:38.774+0000] {sql.py:276} INFO - Executing: CREATE TABLE IF NOT EXISTS Deaths (
            id SERIAL PRIMARY KEY,
            Date DATETIME,
            Country VARCHAR
            Cases FLOAT
            is_Pred BOOLEAN
        )
[2024-08-17T10:29:38.782+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-08-17T10:29:38.792+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-08-17T10:29:38.839+0000] {sql.py:470} INFO - Running statement: CREATE TABLE IF NOT EXISTS Deaths (
            id SERIAL PRIMARY KEY,
            Date DATETIME,
            Country VARCHAR
            Cases FLOAT
            is_Pred BOOLEAN
        ), parameters: None
[2024-08-17T10:29:38.844+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-08-17T10:29:38.845+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "Cases")
LINE 5:             Cases FLOAT
                    ^

[2024-08-17T10:29:38.854+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=predict_values_TS_21, task_id=get_deaths_dataset.create_deaths_table, run_id=scheduled__2024-08-04T00:00:00+00:00, execution_date=20240804T000000, start_date=20240817T102938, end_date=20240817T102938
[2024-08-17T10:29:38.865+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 121 for task get_deaths_dataset.create_deaths_table (ОШИБКА:  ошибка синтаксиса (примерное положение: "Cases")
LINE 5:             Cases FLOAT
                    ^
; 91249)
[2024-08-17T10:29:38.903+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-08-17T10:29:38.912+0000] {warnings.py:110} WARNING - /home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `airflow.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-08-17T10:29:38.921+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-17T10:29:38.924+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
